# mutter

./: .gitignore  Makefile.am  README.in  autogen.sh  configure.ac
clutter/: Makefile.am  clutter-backend.c  clutter-main.c  configure.ac
clutter/clutter/: Makefile.am  clutter-backend.c  clutter-main.c  clutter-stage.c  clutter-version.h.in
clutter/evdev/: clutter-device-manager-evdev.c
clutter/gdk/: clutter-backend-gdk.c  clutter-stage-gdk.c
cogl/: configure.ac
src/: Makefile.am
src/backends/: meta-monitor-config-manager.c  meta-monitor-manager-private.h  meta-monitor-manager.c
src/backends/native/: meta-backend-native.c  meta-launcher.c  meta-monitor-manager-kms.c  meta-renderer-native.c
src/backends/x11/: meta-input-settings-x11.c  meta-monitor-manager-xrandr.c
src/clutter/: Makefile.am  clutter-actor.c  clutter-backend.c  clutter-bezier.c  clutter-child-meta.c  clutter-child-meta.h  clutter-color.c  clutter-color.h  clutter-container.c  clutter-event.c  clutter-event.h  clutter-feature.c  clutter-id-pool.c  clutter-interval.c  clutter-keysyms-table.c  clutter-keysyms-update.pl  clutter-page-turn-effect.c  clutter-paint-volume.c  clutter-property-transition.c  clutter-script-parser.c  clutter-script.c  clutter-stage-manager.c  clutter-test-utils.c  clutter-timeline.h
src/clutter/cally/: cally-clone.c
src/clutter/deprecated/: clutter-alpha.c  clutter-alpha.h  clutter-animator.c  clutter-animator.h  clutter-behaviour.c  clutter-list-model.c  clutter-media.c  clutter-model.c  clutter-model.h  clutter-rectangle.h  clutter-score.c  clutter-score.h  clutter-stage-manager.h  clutter-state.c  clutter-texture.c
src/clutter/x11/: clutter-backend-x11.c  clutter-device-manager-core-x11.c  clutter-device-manager-xi2.c  clutter-stage-x11.c
src/clutter/x11/xsettings/: xsettings-common.h
src/compositor/: compositor.c  meta-background.c  meta-surface-actor-wayland.c  meta-window-actor-private.h  meta-window-actor.c
src/core/: barrier.c  core.c  core.h  device-map-xi2.c  devices-xi2.c  display-private.h  display.c  keybindings-private.h  keybindings.c  main.c  screen-private.h  screen.c  window-private.h  window-props.c  window.c
src/meta/: barrier.h  common.h  display.h
src/ui/: theme-parser.c  theme-private.h  theme.c  ui.c  ui.h
src/wayland/: meta-wayland-buffer.c  meta-wayland-buffer.h  meta-wayland-pointer.c  meta-wayland-pointer.h  meta-wayland-private.h  meta-wayland-seat.c  meta-wayland-surface.c  meta-wayland-surface.h  meta-window-wayland.c  meta-window-xwayland.c  meta-xwayland.c
src/x11/: atomnames.h  window-x11.c
tests/interactive/: Makefile.am
